init project; set default settings; add layout; create font from project icons; setup base colors

--- a/markup/static/scss/common.scss
+++ b/markup/static/scss/common.scss
@@ -1,22 +1,8 @@
-// Common styles of the project
+html,
+body {
+  height: 100%;
 
-html, body {
-    height: 100%;
-}
+  background-color: $body;
 
-.page {
-    
-}
-
-.page__wrapper {
-    min-height: 100%;
-    margin-bottom: -50px;
-}
-
-* html .page__wrapper {
-    height: 100%;
-}
-
-.page__buffer {
-    height: 50px;
+  font-family: $Regular;
 }
