--- a/markup/pages/index.jade
+++ b/markup/pages/index.jade
@@ -1,27 +1,25 @@
 doctype html
-html(class="no-js", lang="ru")
+html(class="no-js", lang="en")
 
-    include ../components/head/head
-    include ../components/example/example
-    include ../components/footer/footer
+	include ../components/head/head
+	include ../components/header/header
+	include ../components/footer/footer
 
-    head
-        +head(head.defaults)
-    body.page
-        |%=symbols=%
+	head
+		+head(head.defaults)
+	body
+		main.main
+			.main__layout
+				.main__header
+					block header
+						+header
+				.main__content
+					block content
+						h1 Hello, I'm layout!
+			.main__footer
+				block footer
+					+footer
+				block modals
 
-        section.page__wrapper
-
-            //- Include your components here
-            +example()
-
-            .page__buffer
-
-        .page__footer
-            +footer()
-
-        script(src='%=static=%js/separate-js/svg4everybody.min.js')
-        script svg4everybody();
-
-        //- Main scripts. You can replace it, but I recommend you to leave it here
-        script(src='%=static=%js/main%=hash=%%=min=%.js')
+		//- Main scripts. You can replace it, but I recommend you to leave it here
+		script(src='%=static=%js/main%=hash=%%=min=%.js')
