--- a/markup/static/scss/GUI.scss
+++ b/markup/static/scss/GUI.scss
@@ -1,2 +1,13 @@
 // GUI stylies of the project
 // For example, styles of the links, buttons and so on.
+
+.main {
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+  max-width: 1538px;
+  min-height: 100%;
+
+  justify-content: space-between;
+}
