--- a/markup/static/scss/vars.scss
+++ b/markup/static/scss/vars.scss
@@ -1,2 +1,8 @@
-// File for scss-vars.
-// For example: main colors, paddings and so on.
+// Var for using custom font
+$Bold: 'Montserrat-Bold', Helvetica, Arial, sans-serif;
+$Italic: 'Montserrat-Italic', Helvetica, Arial, sans-serif;
+$Regular: 'Montserrat-Regular', Helvetica, Arial, sans-serif;
+
+// Var for colors
+$body: #f5f5f5;
+
