header component: logo, social, menu, mail and search; change default layout for fix footer on the bottom

--- a/markup/pages/index.jade
+++ b/markup/pages/index.jade
@@ -2,7 +2,14 @@ doctype html
 html(class="no-js", lang="en")
 
 	include ../components/head/head
+	//- header components
 	include ../components/header/header
+	include ../components/social/social
+	include ../components/menu/menu
+	include ../components/mail/mail
+	include ../components/search/search
+	//- end header components
+
 	include ../components/footer/footer
 
 	head
