--- a/markup/static/scss/vars.scss
+++ b/markup/static/scss/vars.scss
@@ -1,3 +1,6 @@
+// Var base font-size
+$base-font-size: 16px;
+
 // Var for using custom font
 $Bold: 'Montserrat-Bold', Helvetica, Arial, sans-serif;
 $Italic: 'Montserrat-Italic', Helvetica, Arial, sans-serif;
@@ -5,4 +8,9 @@ $Regular: 'Montserrat-Regular', Helvetica, Arial, sans-serif;
 
 // Var for colors
 $body: #f5f5f5;
+$blue: #0D67A8;
 
+
+// Other colors
+$black: #000;
+$white: #fff;
