--- a/markup/static/scss/GUI.scss
+++ b/markup/static/scss/GUI.scss
@@ -6,8 +6,12 @@
   flex-direction: column;
 
   width: 100%;
-  max-width: 1538px;
   min-height: 100%;
 
   justify-content: space-between;
+  &__layout {
+    width: 100%;
+    max-width: 1538px;
+    margin: 0 auto;
+  }
 }
